--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   NetworkManager-vpnc-0.9.8.0.tar.xz: eaac9c6d5533e55b871f8076b915b908c999ed29
-sources:
   NetworkManager-vpnc-0.9.8.2.tar.xz: c680b0048f5bd288e63f0c26096683fc219f1f7b
+sources:
+  NetworkManager-vpnc-0.9.8.6.tar.xz: e41da337256f17d1afda521ff0c4c8a6e0307340
